tests/positive/pr113_tuple_channel.safe
-- Test: pr113_tuple_channel
-- Description: Tuple-typed channel send/receive with copyable tuple elements.
-- Expected: ACCEPT

package pr113_tuple_channel

   channel pair_ch : (boolean, integer) capacity 1;

   task producer with priority = 10

      loop
         send pair_ch, (true, 41);
         delay 0.05;

   task consumer with priority = 10
      payload : (boolean, integer);
      result  : integer = 0;

      loop
         receive pair_ch, payload;
         if payload.1
            result = payload.2;
